--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-TELEGRAM_BOT_TOKEN=123456798:ABC-DEF1234ghIkl-zyx57W2v1u123ew11
-ADMIN_CHAT_ID=123456789
+TELEGRAM_BOT_TOKEN=5552631486:AAE0Sj6EtWARcz7dCisNl-oby7hqiViOErY
+ADMIN_CHAT_ID=1999791981
 
 REMOTE_BASE_PATH="https://somewhere.example.com" # Without trailing slash
 REMOTE_URI="" # Leave empty if your in the root of your domain (With trailing slash)
